2001-04-08  Harri Porten  <porten@kde.org>

	* Solaris fixes: added missing include, less restrictive compile check
	* main.cpp: deactivated KNotify::beep() in pppd-died signal handler,
	  due to appearant race conditions when working remote
	* ppplog.cpp: hardcoded list of syslog files, including my Debian one
	* pppdata.cpp: i18n'ed name of account copy
	* ...

>>>>>>>>>>>>>>>>>>>>>>>>>>>> KDE 2.1.0 released <<<<<<<<<<<<<<<<<<<<<<<<<<<	
2001-01-05  Harri Porten  <porten@kde.org>

	* Solaris patches by Keith Refson <Keith.Refson@earth.ox.ac.uk>
	and Stephen Usher <Stephen.Usher@earth.ox.ac.uk>. Still needs some
	tweaking.
	* logview/monthly.cpp: sensible sort order for each column. cleanup.

>>>>>>>>>>>>>>>>>>>>>>>>>>>> KDE 2.0.1 released <<<<<<<<<<<<<<<<<<<<<<<<<<<
	
2000-11-27  Harri Porten  <harri@trolltech.com>

	* applied 7 bit fix from KDE 1.x for CompuServe users.

2000-11-21  Harri Porten  <harri@trolltech.com>

	* modem.cpp: writeLine() fix from Wolfgang Grandegger. Hit USB modem
	owners and probably more.

>>>>>>>>>>>>>>>>>>>>>>>>>>>> KDE 2.0 released <<<<<<<<<<<<<<<<<<<<<<<<<<<<<	
1999-11-18  Harri Porten  <porten@kde.org>

	* main.cpp: cleaned up signal handlers by posting a user defined
	event to Qt's event loop. The real X stuff will be done in member 
	functions of KPPPWidget now.

1999-11-16  Harri Porten  <porten@kde.org>

	* docking.cpp: ported to make use of new KDockWidget

1999-10-03  Harri Porten  <porten@kde.org>

	* support automatic DNS detection if pppd >= 2.3.7.
	* pppdata.cpp: fixed default account

1999-10-02  Harri Porten  <porten@kde.org>

	* runtests.cpp: determine pppd version. Will be needed to check
	for support of new features

1999-09-26  Harri Porten  <porten@kde.org>

	* runtests.cpp (ppp_available): Linux kernels >= 2.2.13 will have
	a security hole fixed that breaks our check. Let's simply return true.

1999-08-31  Harri Porten  <porten@kde.org>

	* opener.cpp: unified PAP and CHAP code
	* use KMessageBox::Yes enum
